update profile on join.
