# server/internal/api/session.go
@@ -83,3 +83,23 @@ func (api *ApiManagerCtx) Whoami(w http.ResponseWriter, r *http.Request) error {
 		State:   session.State(),
 	})
 }
+
+func (api *ApiManagerCtx) UpdateProfile(w http.ResponseWriter, r *http.Request) error {
+	session, _ := auth.GetSession(r)
+
+	data := &types.MemberProfile{}
+	if err := utils.HttpJsonRequest(w, r, data); err != nil {
+		return err
+	}
+
+	err := api.sessions.Update(session.ID(), *data)
+	if err != nil {
+		if errors.Is(err, types.ErrSessionNotFound) {
+			return utils.HttpBadRequest("session does not exist")
+		} else {
+			return utils.HttpInternalServerError().WithInternalErr(err)
+		}
+	}
+
+	return utils.HttpSuccess(w, true)
+}
